@@ -403,6 +403,8 @@ following image formats are supported:
     @tab Used in Interplay .MVE files.
 @item Karl Morton's video codec  @tab     @tab  X
     @tab Codec used in Worms games.
+@item Kega Game Video (KGV1) @tab      @tab  X
+    @tab Kega emulator screen capture codec.
 @item LCL (LossLess Codec Library) MSZH  @tab     @tab  X
 @item LCL (LossLess Codec Library) ZLIB  @tab  E  @tab  E
 @item LOCO                   @tab     @tab  X
